modify 7.Auto-Deploy.md for 201902222021

--- a/7.Auto-Deploy.md
+++ b/7.Auto-Deploy.md
@@ -17,7 +17,7 @@
 3. 一键回滚到上一个版本
 
 部署的问题：
-1. 代码在哪里：git、svn。
+1. 代码在哪里：git、gitlab、svn。
 2. 获取什么版本代码？
 	git+svn直接拉取某个分支
 	git:指定标签（tag）
@@ -48,9 +48,570 @@
 用户：所有的web服务都应该使用普通用户。所有的web服务器都不应该开启80端口，除了负载均衡。（用命令给普通用户设一个suid并且可以启动80端口）
 1. 每台机器建立用户：useradd www (给每一个用户设定一个指定的uid)
 2. 选中一台为控制机器，用ssh-keygen -t rsa 生成秘钥，并且在所有目标机器包括本身机器的www用户下~/.ssh目录下建立文件authorized_keys文件，写入控制机器的公钥且权限设成600
-3. 写部署脚本：
+3. 写部署脚本框架：
+——————————————————————————————————————————
+[root@clusterFS-node4-salt deploy]# cat /home/www/deploy.sh
+#/bin/bash
+
+#Date/Time Env
+LOG_DATE='date +%Y-%m-%d'  //后获取日期
+LOG_TIME='date +%H-%M-%S'
+
+CDATE=$(date +%Y-%m-%d)  //先获取日期
+CTIME=$(date +%H-%M-%S)
+
+#Shell Env
+SHELL_NAME="deploy.sh"
+SHELL_DIR="/home/www"
+SHELL_LOG="${SHELL_DIR}/${SHELL_NAME}.log"
+
+#Code Env
+CODE_DIR="/deploy/code/web-demo"
+CODE_CONFIG="/deploy/config"
+CODE_TMP="/deploy/tmp"
+CODE_TAR="/deploy/tar"
+LOCK_FILE="/tmp/deploy.lock"
+
+#Fun
+usage(){
+        echo $"Usage: $0 [ deploy | rollback ]"
+}
+
+writelog(){  //日志函数
+        LOGINFO=$1
+        echo "`${LOG_DATE}` `${LOG_TIME}` : ${SHELL_NAME} : ${LOGINFO}" >> ${SHELL_LOG}
+
+}
+
+shell_lock(){
+        touch ${LOCK_FILE}
+}
+
+shell_unlock(){
+        rm -f ${LOCK_FILE}
+}
+
+code_get(){
+        writelog "code_get";  //调用日志函数并传当前函数做为参数传入
+        cd $CODE_DIR && git pull
+}
 
 
+code_build(){
+        echo code_build
+}
+
+code_config(){
+        echo code_config
+
+}
+
+code_tar(){
+        echo code_tar
+}
+
+code_scp(){
+        echo code_scp
+
+}
+
+cluster_node_remove(){
+        echo cluster_node_remove
+}
+
+code_deploy(){
+        echo code_deploy
+}
+
+config_diff(){
+        echo config_diff
+}
+
+code_test(){
+        echo code_test
+}
+
+cluster_node_in(){
+        echo cluster_node_in
+}
+
+rollback(){
+        echo rollback
+}
+
+main(){
+        if [ -f ${LOCK_FILE} ];then
+                echo "Deploy is running" && exit;
+        fi
+        DEPLOY_METHOD=$1
+        case $DEPLOY_METHOD in
+                deploy)
+                        shell_lock;
+                        code_get;
+                        code_build;
+                        code_config;
+                        code_tar;
+                        code_scp;
+                        cluster_node_remove;
+                        code_deploy;
+                        config_diff;
+                        code_test;
+                        cluster_node_in;
+                        shell_unlock;
+                        ;;
+                rollback)
+                        shell_lock;
+                        rollback;
+                        shell_unlock;
+                        ;;
+                *)
+                        usage;
+                        ;;
+        esac
+}
+main $1
+
+——————————————————————————————————————————
+linux锁文件目录：/var/run/lock下
+shell脚本中测试锁文件是否有效可用sleep 60 睡眠来测试
+
+4. 自动化部署流程：
+————————————————————————————————————————
+[www@clusterFS-node4-salt ~]$ cat deploy.sh
+#/bin/bash
+
+#Dir List
+#mkdir -p /deploy/code/web-demo
+#mkdir -p /deploy/config/web-demo/base
+#mkdir -p /deploy/config/web-demo/other
+#mkdir -p /deploy/tar
+#mkdir -p /deploy/tmp
+#mkdir /webroot
+#chown R www:www /deploy
+#chown R www:www /opt/webroot
+#chown R www:www /webroot
+
+#Node List Env
+PRE_LIST="192.168.1.31"
+GROUP1_LIST="192.168.1.37"
+
+#Date/Time Env
+LOG_DATE='date +%Y-%m-%d'
+LOG_TIME='date +%H-%M-%S'
+
+CDATE=$(date +%Y-%m-%d)
+CTIME=$(date +%H-%M-%S)
+
+#Shell Env
+SHELL_NAME="deploy.sh"
+SHELL_DIR="/home/www"
+SHELL_LOG="${SHELL_DIR}/${SHELL_NAME}.log"
+
+#Code Env
+PRO_NAME="web-demo"
+CODE_DIR="/deploy/code/web-demo"
+CONFIG_DIR="/deploy/config/web-demo"
+TMP_DIR="/deploy/tmp"
+TAR_DIR="/deploy/tar"
+LOCK_FILE="/tmp/deploy.lock"
+
+#Fun
+usage(){
+        echo $"Usage: $0 [ deploy | rollback ]"
+}
+
+writelog(){
+        LOGINFO=$1
+        echo "`${LOG_DATE}` `${LOG_TIME}` : ${SHELL_NAME} : ${LOGINFO}"  >> ${SHELL_LOG}
+}
+
+shell_lock(){
+        touch ${LOCK_FILE}
+}
+
+shell_unlock(){
+        rm -f ${LOCK_FILE}
+}
+
+code_get(){
+        writelog "code_get";
+        cd $CODE_DIR && echo "git pull"
+        /bin/cp -r ${CODE_DIR} ${TMP_DIR}/
+        API_VER="123"
+}
+
+
+code_build(){
+        echo code_build
+}
+
+code_config(){
+        writelog "code_config"
+        /bin/cp -r ${CONFIG_DIR}/base/* ${TMP_DIR}/"${PRO_NAME}"
+        PKG_NAME="${PRO_NAME}"_"${API_VER}"_"${CDATE}-${CTIME}"
+        cd ${TMP_DIR} && mv ${PRO_NAME} ${PKG_NAME}
+}
+
+code_tar(){
+        writelog "code_tar"
+        cd ${TMP_DIR} && tar -czf ${PKG_NAME}.tar.gz ${PKG_NAME}
+        writelog "${PKG_NAME}.tar.gz"
+}
+
+code_scp(){
+        writelog "code_scp"
+        for node in $PRE_LIST;do
+                scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+        done
+
+        for node in $GROUP1_LIST;do
+                scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+        done
+}
+
+url_test(){
+        URL=$1
+        curl -s --head $URL  | grep '200 OK'
+        if [ $? -ne 0 ];then
+                shell_unlock;
+                writelog "test ERROR" && exit 0
+        fi
+}
+
+pre_deploy(){
+        writelog  "remove from cluster"
+                ssh ${PRE_LIST} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+                ssh ${PRE_LIST} "rm -f /webroot/web-demo && ln -s /opt/webroot/${PKG_NAME} /webroot/web-demo"
+        scp ${CONFIG_DIR}/other/192.168.1.31.crontab.xml 192.168.1.31:/webroot/web-demo/crontab.xml
+}
+pre_test(){
+        url_test "http://${PRE_LIST}/index.html"
+        writelog  "add to cluster"
+}
+
+group1_deploy(){
+        writelog  "remove from cluster"
+        for node in $GROUP1_LIST;do
+                ssh ${node} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+                ssh ${node} "rm -f /webroot/web-demo && ln -s /opt/webroot/${PKG_NAME} /webroot/web-demo"
+        done
+}
+group1_test(){
+        url_test "http://192.168.1.37/index.html"
+        writelog "add to cluster"
+}
+
+rollback(){
+        writelog "rollback"
+}
+
+main(){
+        if [ -f ${LOCK_FILE} ];then
+                echo "Deploy is running" && exit;
+        fi
+        DEPLOY_METHOD=$1
+        case $DEPLOY_METHOD in
+                deploy)
+                        shell_lock;
+                        code_get;
+                        code_build;
+                        code_config;
+                        code_tar;
+                        code_scp;
+                        pre_deploy;
+                        pre_test;
+                        group1_deploy;
+                        group1_test;
+                        shell_unlock;
+                        ;;
+                rollback)
+                        shell_lock;
+                        rollback;
+                        shell_unlock;
+                        ;;
+                *)
+                        usage;
+                        ;;
+        esac
+}
+main $1
+
+————————————————————————————————————————
+[root@clusterFS-node4-salt web-demo]# curl --head http://192.168.1.31/index.html -s | grep '200 OK'
+HTTP/1.1 200 OK
+[root@clusterFS-node4-salt web-demo]# echo $?  #过虑得到返回值为0
+0
+[root@clusterFS-node4-salt web-demo]# curl --head http://192.168.1.31/index.html -s | grep '200OK'
+[root@clusterFS-node4-salt web-demo]# echo $?	#过虑不到返回值为1
+1
+
+5. 回滚流程：
+一、普通回滚：
+1.列出回滚版本
+2.目标服务移除集群
+3.执行回滚
+4.重启和测试
+5.加入集群
+
+二、紧急回滚：
+1.列出回滚版本
+2.执行回滚（重启）
+
+三、超紧急回滚：直接回滚上个版本（重启）
+
+注意：秒级回滚的精髓在于软链接
+————————————————————————————————————————
+ROLLBACK_LIST="192.168.1.31 192.168.1.37"
+
+rollback_fun(){
+        for node in $ROLLBACK_LIST;do
+                ssh $node "if [ -d /opt/webroot/$1 ];then rm -f /webroot/web-demo && ln -s /opt/webroot/$1 /webroot/web-demo ;else echo '$1 not DIR' && exit ; fi"
+        done
+}
+
+rollback(){
+	    writelog "rollback"
+        if [ -z $1 ];then
+                shell_unlock
+                echo "please input rollback version" && exit
+        fi
+        case $1 in
+                list)
+                        ls -l /opt/webroot/*.tar.gz
+                        ;;
+                *)
+                        rollback_fun $1
+        esac
+}
+
+main(){
+        if [ -f ${LOCK_FILE} ];then
+                echo "Deploy is running" && exit;
+        fi
+        DEPLOY_METHOD=$1
+        ROLLBACK_VER=$2
+        case $DEPLOY_METHOD in
+                deploy)
+                        shell_lock;
+                        code_get;
+                        code_build;
+                        code_config;
+                        code_tar;
+                        code_scp;
+                        pre_deploy;
+                        pre_test;
+                        group1_deploy;
+                        group1_test;
+                        shell_unlock;
+                        ;;
+                rollback)
+                        shell_lock;
+                        rollback $ROLLBACK_VER;
+                        shell_unlock;
+                        ;;
+                *)
+                        usage;
+                        ;;
+        esac
+}
+main $1 $2
+————————————————————————————————————————
+
+6. 安装gitlab（git私有仓库）
+硬件最低配置：双核4G内存
+	1. yum install -y policycoreutils-python
+	2. 添加gitlab镜像:wget https://mirrors.tuna.tsinghua.edu.cn/gitlab-ce/yum/el7/gitlab-ce-10.0.0-ce.0.el7.x86_64.rpm
+	3. 安装gitlab:rpm -i gitlab-ce-10.5.7-ce.0.el7.x86_64.rpm
+	4. 修改gitlab配置文件指定服务器ip和自定义端口:vim  /opt/gitlab/etc/gitlab.rb
+	5. 重置并启动GitLab:1 gitlab-ctl   reconfigure  2 gitlab-ctl   restart
+	6. 克隆gitlab：git glone git@192.168.1.31/web/web-demo.git
+	7. 像git一样push、pull操作
+
+附deploy.sh完全脚本：
+———————————————————————————————————————————————
+[www@clusterFS-node4-salt ~]$ cat deploy.sh
+#/bin/bash
+
+#Dir List
+#mkdir -p /deploy/code/$PRO_NAME
+#mkdir -p /deploy/config/$PRO_NAME/base
+#mkdir -p /deploy/config/$PRO_NAME/other
+#mkdir -p /deploy/tar
+#mkdir -p /deploy/tmp
+#mkdir /webroot
+#chown R www:www /deploy
+#chown R www:www /opt/webroot
+#chown R www:www /webroot
+
+#Node List Env
+PRE_LIST="192.168.1.31"
+GROUP1_LIST="192.168.1.37"
+ROLLBACK_LIST="192.168.1.31 192.168.1.37"
+
+#Date/Time Env
+LOG_DATE='date +%Y-%m-%d'
+LOG_TIME='date +%H-%M-%S'
+
+CDATE=$(date +%Y-%m-%d)
+CTIME=$(date +%H-%M-%S)
+
+#Shell Env
+SHELL_NAME="deploy.sh"
+SHELL_DIR="/home/www"
+SHELL_LOG="${SHELL_DIR}/${SHELL_NAME}.log"
+
+#Code Env
+PRO_NAME="web-demo"
+CODE_DIR="/deploy/code/$PRO_NAME"
+CONFIG_DIR="/deploy/config/$PRO_NAME"
+TMP_DIR="/deploy/tmp"
+TAR_DIR="/deploy/tar"
+LOCK_FILE="/tmp/deploy.lock"
+
+#Fun
+usage(){
+        echo "Usage: $0 { deploy | rollback [ list | version  ]}"
+}
+
+writelog(){
+        LOGINFO=$1
+        echo "`${LOG_DATE}` `${LOG_TIME}` : ${SHELL_NAME} : ${LOGINFO}"  >> ${SHELL_LOG}
+}
+
+shell_lock(){
+        touch ${LOCK_FILE}
+}
+
+shell_unlock(){
+        rm -f ${LOCK_FILE}
+}
+
+code_get(){
+        writelog "code_get";
+        cd $CODE_DIR && git pull
+        /bin/cp -r ${CODE_DIR} ${TMP_DIR}/
+        API_VERL=`git show  | grep commit | cut -d ' ' -f2`
+        API_VER="${API_VERL:0:6}"
+}
+
+
+code_build(){
+        writelog "code_build"
+}
+
+code_config(){
+        writelog "code_config"
+        /bin/cp -r ${CONFIG_DIR}/base/* ${TMP_DIR}/${PRO_NAME}
+        PKG_NAME="${PRO_NAME}"_"${API_VER}"_"${CDATE}-${CTIME}"
+        cd ${TMP_DIR} && mv ${PRO_NAME} ${PKG_NAME}
+}
+
+code_tar(){
+        writelog "code_tar"
+        cd ${TMP_DIR} && tar -czf ${PKG_NAME}.tar.gz ${PKG_NAME}
+}
+
+code_scp(){
+        writelog "code_scp"
+        for node in $PRE_LIST;do
+                scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+        done
+
+        for node in $GROUP1_LIST;do
+                scp ${TMP_DIR}/${PKG_NAME}.tar.gz ${node}:/opt/webroot
+        done
+}
+
+url_test(){
+        URL=$1
+        curl -s --head $URL  | grep '200 OK'
+        if [ $? -ne 0 ];then
+                shell_unlock;
+                writelog "test ERROR" && exit 0
+        fi
+}
+
+pre_deploy(){
+        writelog  "remove pre from cluster"
+                ssh ${PRE_LIST} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+                ssh ${PRE_LIST} "rm -f /webroot/$PRO_NAME && ln -s /opt/webroot/${PKG_NAME} /webroot/$PRO_NAME"
+        scp ${CONFIG_DIR}/other/192.168.1.31.crontab.xml 192.168.1.31:/webroot/$PRO_NAME/crontab.xml
+}
+pre_test(){
+        writelog "pre_test"
+        url_test "http://${PRE_LIST}:8888/index.html"
+        writelog  "add pre to cluster"
+}
+
+group1_deploy(){
+        writelog  "remove group1 from cluster"
+        for node in $GROUP1_LIST;do
+                ssh ${node} "cd /opt/webroot && tar -xzf ${PKG_NAME}.tar.gz"
+                ssh ${node} "rm -f /webroot/$PRO_NAME && ln -s /opt/webroot/${PKG_NAME} /webroot/$PRO_NAME"
+        done
+}
+group1_test(){
+        writelog "group1_test"
+        url_test "http://$GROUP1_LIST/index.html"
+        writelog "add group1 to cluster"
+}
+
+rollback_fun(){
+        writelog "rollback"
+        for node in $ROLLBACK_LIST;do
+                ssh $node "if [ -d /opt/webroot/$1 ];then rm -f /webroot/$PRO_NAME && ln -s /opt/webroot/$1 /webroot/$PRO_NAME ;else echo '$1 not DIR' && exit ; fi"
+        done
+}
+
+rollback(){
+        if [ -z $1 ];then
+                shell_unlock
+                echo "please input rollback version" && exit
+        fi
+        case $1 in
+                list)
+                        ls -l /opt/webroot/*.tar.gz
+                        ;;
+                *)
+                        rollback_fun $1
+        esac
+}
+
+main(){
+        if [ -f ${LOCK_FILE} ];then
+                echo "Deploy is running" && exit;
+        fi
+        DEPLOY_METHOD=$1
+        ROLLBACK_VER=$2
+        case $DEPLOY_METHOD in
+                deploy)
+                        shell_lock;
+                        code_get;
+                        code_build;
+                        code_config;
+                        code_tar;
+                        code_scp;
+                        pre_deploy;
+                        pre_test;
+                        group1_deploy;
+                        group1_test;
+                        shell_unlock;
+                        ;;
+                rollback)
+                        shell_lock;
+                        rollback $ROLLBACK_VER;
+                        shell_unlock;
+                        ;;
+                *)
+                        usage;
+                        ;;
+        esac
+}
+main $1 $2
+———————————————————————————————————————————————
+脚本解释：
+按照自动化部署流程来编写脚本，总体相像，在部署时先拿一台预热节点来部署，当预热节点部署成功且测试通过时，即可继续部署剩余所有节点，当预热节点部署失败，此时剩余节点不会继续部署，只会导致预热节点失败，可保证不会大面积瘫焕。
+回滚操作按照紧急回滚流程来操作，先列出回滚版本号，后回滚指定版本号
 
 
 
