modify  7.Auto-Deploy.md

--- a/7.Auto-Deploy.md
+++ b/7.Auto-Deploy.md
@@ -613,6 +613,121 @@ main $1 $2
 按照自动化部署流程来编写脚本，总体相像，在部署时先拿一台预热节点来部署，当预热节点部署成功且测试通过时，即可继续部署剩余所有节点，当预热节点部署失败，此时剩余节点不会继续部署，只会导致预热节点失败，可保证不会大面积瘫焕。
 回滚操作按照紧急回滚流程来操作，先列出回滚版本号，后回滚指定版本号
 
+##持续集成部分
+持续集成：
+1. git pull 拉取最新的代码 	更新非常频繁，没有特别严格的项目管理。
+2. git tag 获取指定的标签版本 更新没那么频繁，有一定的项目管理的团队。
+3. 获取指定的commit id
+	master分支	发布的版本
+	dev分支	test的代码版本
+	自己的分支
+DevOps:是一种文化，是开发、运维、测试之间沟通的一种文化	过程、方法、系统的统称。
+目标是一样的。为了让我们的软件、构建、测试、发布更加的敏捷、频繁、可靠。跟持续集成很像
+运维：需要掌控大局	或者掌控DevOps，运维没有能力是不行的	测试工具、方法、监控
+
+持续集成：指在软件开发过程中，频繁地将代码集成到主干上，然后进行自动化测试。
+持续交付：批在持续集成的基础上，将集成后的代码部署到更贴近真实运行环境的类生产环境。如果代码没有问题，可以继续手动部署到生产环境中。（手动部署到生产环境中是大部分公司用的）
+持续部署：在持续交付的基础上，把部署到生产环境的过程自动化。
+OWASP(Open Web Application Security Project):运维必须会，因为这个涉及应用安全
+
+持续集成之Jenkins安装部署实战：
+1. 安装JDK：Jenkins是Java编写的，所以需要先安装JDK，这里采用yum安装，如果对版本有需求，可以直接在Oracle官网下载JDK。
+[root@clusterFS-node3-salt ~]# yum install -y java-1.8.0
+2. 安装jenkins:
+[root@clusterFS-node3-salt ~]# wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat/jenkins.repo
+[root@clusterFS-node3-salt ~]# rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
+[root@clusterFS-node3-salt ~]# yum install jenkins -y
+[root@clusterFS-node3-salt ~]# systemctl start jenkins
+[root@clusterFS-node3-salt ~]# netstat -tunlp | grep 8080  #jenkins默认启动8080端口
+3. 在插件管理中搜索gitlab,安装gitlab plugin和gitlab hook plugin两个插件，因为要用jenkins和gitlab来集成。
+4. jenkins最主要的是插件，添加插件可以在web上添加安装也可以在/var/lib/jenkins/plugins/目录下添加，jenkins可以通过邮件来通知信息。
+5. 添加凭据：用于访问gitlab的仓库（把jenkins服务机器的公钥放置到gitlab上，把私钥放置到jenkins上这样可以使用jenkins来访问gitlab仓库）
+6. 立即构建并选写构建任务从控制台输出可查看任务执行情况
+
+##持续代码质量管理-Sonar部署：
+Sonar 是一个用于代码质量管理的开放平台。通过插件机制，Sonar 可以集成不同的测试工具，代码分析工具，以及持续集成工具。与持续集成工具（例如 Hudson/Jenkins 等）不同，Sonar 并不是简单地把不同的代码检查工具结果（例如 FindBugs，PMD 等）直接显示在 Web 页面上，而是通过不同的插件对这些结果进行再加工处理，通过量化的方式度量代码质量的变化，从而可以方便地对不同规模和种类的工程进行代码质量管理。
+
+在对其他工具的支持方面，Sonar 不仅提供了对 IDE 的支持，可以在 Eclipse 和 IntelliJ IDEA 这些工具里联机查看结果；同时 Sonar 还对大量的持续集成工具提供了接口支持，可以很方便地在持续集成中使用 Sonar。
+此外，Sonar 的插件还可以对 Java 以外的其他编程语言提供支持，对国际化以及报告文档化也有良好的支持。
+
+Sonar部署
+需要mysql5.6，java1.8以上
+Sonar的相关下载和文档可以在下面的链接中找到：http://www.sonarqube.org/downloads/。需要注意最新版的Sonar需要至少JDK 1.8及以上版本。
+1. [root@clusterFS-node2-salt auto-deploy]# cd /usr/local/src
+2. [root@clusterFS-node2-salt src]# wget https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-6.5.zip
+3. [root@clusterFS-node2-salt src]# unzip sonarqube-6.5.zip
+4. [root@clusterFS-node2-salt src]# mv sonarqube-6.5 /usr/local/
+5. [root@clusterFS-node2-salt src]# ln -s sonarqube-6.5/ sonarqube
+安装mysql数据库：
+rpm -Uvh https://dev.mysql.com/get/mysql80-community-release-el7-2.noarch.rpm
+禁用mysql80和mysql57:
+sudo yum-config-manager --disable mysql80-community
+sudo yum-config-manager --disable mysql57-community
+启用mysql56:
+sudo yum-config-manager --enable mysql56-community #sonar只能mysql5.6版本，其他版本报错
+6. 准备Sonar数据库:
+mysql> CREATE DATABASE sonar CHARACTER SET utf8 COLLATE utf8_general_ci;
+mysql> GRANT ALL ON sonar.* TO 'sonar'@'localhost' IDENTIFIED BY 'sonar@pw';
+mysql> GRANT ALL ON sonar.* TO 'sonar'@'%' IDENTIFIED BY 'sonar@pw';
+mysql> FLUSH PRIVILEGES;
+7. 配置sonar:
+[root@clusterFS-node2-salt local]# cd /usr/local/sonarqube/conf/
+[root@clusterFS-node2-salt conf]# ls
+sonar.properties  wrapper.conf
+8. 编写配置文件，修改数据库配置:
+[root@clusterFS-node2-salt conf]# vim sonar.properties
+sonar.jdbc.username=sonar
+sonar.jdbc.password=sonar@pw
+sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance
+配置Java访问数据库驱动(可选)
+默认情况Sonar有自带的嵌入的数据库，那么你如果使用类是Oracle数据库，必须手动复制驱动类到${SONAR_HOME}/extensions/jdbc-driver/oracle/目录下，其它支持的数据库默认提供了驱动。其它数据库的配置可以参考官方文档：
+http://docs.sonarqube.org/display/HOME/SonarQube+Platform
+9. 启动Sonar:你可以在Sonar的配置文件来配置Sonar Web监听的IP地址和端口，默认是9000端口。
+sonar.web.host=0.0.0.0
+sonar.web.port=9000
+sonar.web.context=/sonarqube  #sonarqube为web的首页
+10. [root@clusterFS-node3-salt conf]# /usr/local/sonarqube/bin/linux-x86-64/sonar.sh start #当sonar服务启动不来时看下与数据库连接是否正常，是个坑
+11. http://192.168.1.37访问sonarqube ,默认帐户密码皆为admin
+12. 手动下载插件可到github Sonaraube社区下载：https://github.com/SonarQubeCommunity，然后可放到/usr/local/sonarqube/extensions/plugins目录下，重启sonar服务即可 
+13. 需要下载你要测试的语言包插件，例如python,java,php,css等，插件只是语言规则
+14. 通过SonarQube Scanner来测试代码，需要安装SonarQube Scanner
+15. 下载sonarQube Scanner:[root@clusterFS-node2-salt src]# wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.3.0.1492-linux.zip
+16. 安装sonarQube Scanner:unzip sonar-scanner-cli-3.3.0.1492-linux.zip; mv sonar-scanner-cli-3.3.0.1492-linux /usr/local; ln -s sonar-scanner-cli-3.3.0.1492-linux sonar-scanner
+17. 因为sonarQube Scanner跟sonarQube有关联所以要修改配置文件:[root@clusterFS-node2-salt conf]# vim /usr/local/sonar-scanner/conf/sonar-scanner.properties如下： 
+sonar.host.url=http://192.168.1.37:9000
+sonar.sourceEncoding=UTF-8
+sonar.jdbc.username=sonar
+sonar.jdbc.password=sonar@pw
+sonar.jdbc.url=jdbc:mysql://localhost:3306/sonar?useUnicode=true&characterEncoding=utf8
+18. sonar官方提供代码测试地址：https://github.com/sonarSource/sonar-scanning-examples，下载下来
+19. 在/usr/local/src/sonar-scanning-examples-master/sonarqube-scanner-build-wrapper-linux路径下，有sonar-project.properties配置文件，里面填写了有关编程语言的信息，使测试信息到sonarqube上,编辑配置文件如下：
+[root@clusterFS-node3-salt sonarqube-scanner-build-wrapper-linux]# cat sonar-project.properties
+
+sonar.projectKey=phpkey
+sonar.projectName=php
+sonar.projectVersion=1.0
+sonar.sources=src
+sonar.language=php
+# The build-wrapper output dir
+sonar.cfamily.build-wrapper-output=bw-outputs
+# Encoding of the source files
+sonar.sourceEncoding=UTF-8
+注：php测试有反应，java测试无反应。sonar-project.properties这个配置文件要么让开发写在代码里面，要么手输在sonarqube-scanner里面。
+
+20. 由于sonarqube-scanner需要跟jenkins相结合，所以要在jenkins上装sonarQube Plugin插件，这样才能使用sonarqube-scanner
+21. 
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </pre>
