--- a/8.ELKStack.md
+++ b/8.ELKStack.md
@@ -1,14 +1,97 @@
-﻿Elasticsearch天生是分布式的，有两种方式进行通信：1.组播（加到组中，在组中的主机互相通信） 2.单播(指定主机)
+#ELKStack
+ELKStack简介:
+对于日志来说，最常见的需求就是收集、存储、查询、展示，开源社区正好有相对应的开源项目：logstash（收集）、elasticsearch（存储+搜索）、kibana（展示），我们将这三个组合起来的技术称之为ELKStack，所以说ELKStack指的是Elasticsearch、Logstash、Kibana技术栈的结合
+
+Elasticsearch天生是分布式的，有两种方式进行通信：1.组播（加到组中，在组中的主机互相通信） 2.单播(指定主机)
+
+<pre>
+安装JDK
+[root@clusterFS-node4-salt ~]# yum install -y java-1.8.0
+[root@clusterFS-node4-salt ~]# java -version
+openjdk version "1.8.0_191"
+OpenJDK Runtime Environment (build 1.8.0_191-b12)
+OpenJDK 64-Bit Server VM (build 25.191-b12, mixed mode)
+##Elasticsearch部署
+Elasticsearch首先需要Java环境，所以需要提前安装好JDK，可以直接使用yum安装。也可以从Oracle官网下载JDK进行安装。开始之前要确保JDK正常安装并且环境变量也配置正确：
+YUM安装ElasticSearch
+1.下载并安装GPG key:
+[root@clusterFS-node4-salt ~]# rpm --import https://packages.elastic.co/GPG-KEY-elasticsearch
+2.添加yum仓库:
+[root@clusterFS-node4-salt ~]# vim /etc/yum.repos.d/elasticsearch.repo
+[elasticsearch-2.x]
+name=Elasticsearch repository for 2.x packages
+baseurl=http://packages.elastic.co/elasticsearch/2.x/centos
+gpgcheck=1
+gpgkey=http://packages.elastic.co/GPG-KEY-elasticsearch
+enabled=1
+3.安装elasticsearch:
+[root@clusterFS-node4-salt ~]#  yum install -y elasticsearch
+4.更改elasticsearch.yml配置文件：
+[root@clusterFS-node4-salt elasticsearch]# vim elasticsearch.yml
+[root@clusterFS-node4-salt elasticsearch]# grep '^[a-Z]' elasticsearch.yml
+cluster.name: myes
+node.name: elk-node1
+path.data: /data/es-data
+path.logs: /var/log/elasticsearch
+bootstrap.memory_lock: true  #锁住物理内存不适用虚拟内存
+network.host: 192.168.1.31
+http.port: 9200
+5.配置/data目录给elasticsearch权限：
 [root@clusterFS-node4-salt ~]# chown -R elasticsearch:elasticsearch /data
-lucene是搜索巨头
-curl命令运维必会
+6.启动elasticsearch:
+[root@clusterFS-node4-salt elasticsearch]# systemctl start elasticsearch.service
+7.测试elasticsearch服务是否正常：
 [root@clusterFS-node4-salt ~]# curl -i -XGET "http://192.168.1.31:9200/_count"
 HTTP/1.1 200 OK
 Content-Type: application/json; charset=UTF-8
 Content-Length: 59
 
 {"count":0,"_shards":{"total":0,"successful":0,"failed":0}}
+注：java使用得是lucene，lucene是搜索巨头，大部分搜索基本都是lucene，lucene本身没有集群，高可用，分片。而elasticsearch具备集群，高可用和分片，elasticsearch底层是lucene。elasticsearch跟glusterFS一样，分布式是无中心的。
+8.装插件，用插件联系elasticsearch[也可以用api]:
+[root@clusterFS-node4-salt ~]# /usr/share/elasticsearch/bin/plugin install mobz/elasticsearch-head  #直接从github上去抓取安装
+[root@clusterFS-node4-salt ~]# /usr/share/elasticsearch/bin/plugin install lmenezes/elasticsearch-kopf  #直接从github上去抓取安装
+lukas-vlcek/bigdesk#bigdesk插件直接从github上抓取，但是版本不支持
+[root@clusterFS-node4-salt ~]# /usr/share/elasticsearch/bin/plugin install marvel-agent  #从官网上去抓取
+9.测试插件kopf:
+http://192.168.1.31:9200/_plugin/kopf/ 
+10.访问插件head[用于集群管理]:
+http://192.168.1.31:9200/_plugin/head/
+10.1：
+点击复合查询-输入/index-demo/test-选择POST-输入json信息并提交请求
+json信息：
+{
+  "user": "oldboy",
+  "mesg": "hello world"
+}
+输出：
+{
+
+    "_index": "index-demo",
+    "_type": "test",
+    "_id": "AWkvYTZQKeOJs7st2toX",
+    "_version": 1,
+    "_shards": {
+        "total": 2,
+        "successful": 1,
+        "failed": 0
+    },
+    "created": true
+
+}
+10.2:
+点击概览-可查看到0 1 2 3 4 这些分片-深黑色是主分片浅灰色是副本分片-主分片和负分片要部署在不同的机器上-点击连接-集群健康值为黄色为良好，为红色是主负本分片都丢失了
+注意：在生产环境中，http://192.168.1.31:9200/_plugin/head/打开要5分钟，因为elasticsearch要去收集日志并整理，要花时间所致。
+
+11.访问插件kopf:
+http://192.168.1.31:9200/_plugin/kopf/ 
 
 
 
 
+
+
+
+
+
+</pre>
