modify 8.ELKStack.md for 201903041759

--- a/8.ELKStack.md
+++ b/8.ELKStack.md
@@ -366,7 +366,7 @@ output{
 
 10.删除~目录下.sincedb开头的隐藏文件（用户记录index索引收集到哪一行的数据），重新收集日志
 11.运行/opt/logstash/bin/logstash -f /etc/logstash/conf.d/file.conf重新创建index，并且使java报的Exception都在一行显示，不会错误的显示多行
-注意：建立索引必需使用/opt/logstash/bin/logstash -f /etc/logstash/conf.d/file.conf来建立，重启服务并不会建立索引。
+注意：建立索引必需使用/opt/logstash/bin/logstash -f /etc/logstash/conf.d/file.conf来建立，重启服务并不会建立索引。(由于启动/etc/init.d/logstash restart 而有些日志没有写到输出的地方，原因是有些日志文件logstash这个用户没有权限读取。)
 
 12.收集nginx日志：
 logstash使用json插件来收集nginx日志，排版nginx日志取得需要的字段信息。因为nginx日志默认并不是json格式，好在nginx支持日志改成json格式。
@@ -492,7 +492,8 @@ output {
         codec => rubydebug
     }
 }
-2. 通过nc连接端口传送日志到logstash
+2. /opg/logstash/bin/logstash -f tcp.conf
+3. 通过任意一种方式连接端口传送日志到logstash
 echo "hehe" | nc 192.168.1.31 6666
 nc 192.168.1.31 6666 < /etc/resolv.conf
 echo "hello" > /dev/tcp/192.168.1.31/6666
@@ -750,7 +751,171 @@ output{
 /opt/logstash/bin/logstash -f apache.conf
 16.192.168.1.37上运行indexer.conf，再让logstash读取redis上的日志并进行过虑标准输出。
 /opt/logstash/bin/logstash -f indexer.conf
+17.设置logstash读取redis日志到elasticsearch中：
+[root@clusterFS-node3-salt ~]# cat /etc/logstash/conf.d/indexer.conf 
+input {
+         redis {
+                host => "192.168.1.31"
+                port => "6379"
+                db => "6"
+                data_type => "list"
+                key => "apache-accesslog"
+        }
+}
 
+filter {
+        grok{
+                match => { "message" => "%{COMBINEDAPACHELOG}" }
+        }
+}
+
+
+output{
+        elasticsearch {
+            hosts => ["192.168.1.31:9200"]
+            index => "apache-accesslog-%{+YYYY.MM}"
+        }
+}
+18.[root@clusterFS-node3-salt conf.d]# /opt/logstash/bin/logstash -f indexer.conf 
+19.然后测试ab -n 1000 -c 1 http://192.168.1.31:81/ 
+20.在kibana中设置时间显示的时候点开设置时间时左边有个自动刷新功能，一般设成1分钟。
 </pre>
 
 #ELKStack生产环境实战
+<pre>
+需求分析：
+访问日志：apache访问日志、nginx访问日志、tomcat访问日志    
+错误日志：error日志、java日志(需要使用多行插件并配合正则表达式来处理)
+系统日志：/var/log/*   syslog   
+运行日志：程序写的。
+网络日志：防火墙、交换机、路由器的日志。
+
+学习的插件：file（codec => "json"）、syslog、tcp、grok、redis  
+
+1. 标准化：日志放哪里（/data/logs/），格式是什么(要求JSON)，命名规则（access-log、error_log、runtime_log三个目录），日志怎么切割（按天、按小时。access_log和error_log用crontab进行切分，runtime_log由程序直接行写的）
+#所有原始的文本----rsync到NAS后，删除最近三天前的。（不建议复制到NAS和NFS，建议复制到本地，access-log每小时进行切片，error-log进行每天切片。）
+2. 工具化：如何使用logstash进行收集方案
+
+注意：1.systemctl restart logstash #由于启动logstash而有些日志没有写到输出的地方，原因是有些日志文件logstash这个用户没有权限读取。2.type是关键字，开发不能用，否则会覆盖你的type类型而无法判断。3.写入redis的时候所有的访问日志设为db6，错误日志写成db7，给它分开。
+
+流程图：
+源日志==>logstash收集==>写入redis存储<==logstash读取redis写到es==>kibana展示
+
+###实战：
+-----------------------------
+#192.168.1.31上：
+1. [root@clusterFS-node4-salt conf.d]# cat shipper.conf 
+input {
+        file{
+                path => "/var/log/httpd/access_log"
+                start_position => "beginning"
+                type => "apache-accesslog"
+        }
+        file {
+                path => "/var/log/elasticsearch/myes.log"
+                type => "es-log"
+                start_position => "beginning"
+                codec => multiline{
+                        pattern => "^\["
+                        negate => true
+                        what => "previous"
+        }
+    }
+}
+
+output{
+        if [type] == "apache-accesslog" {
+                redis {
+                        host => "192.168.1.31"
+                        port => "6379"
+                        db => "6"
+                        data_type => "list"
+                        key => "apache-accesslog"
+                }
+        }
+        if [type] == "es-log" {
+                redis {
+                        host => "192.168.1.31"
+                        port => "6379"
+                        db => "6"
+                        data_type => "list"
+                        key => "es-log"
+                }
+        }
+}
+2. [root@clusterFS-node4-salt logstash]# vim /etc/init.d/logstash 
+LS_USER=root   #将logstash改成root(如果不启端口用root，启用端口用logstash用户)
+LS_GROUP=root
+3. [root@clusterFS-node4-salt conf.d]# systemctl restart logstash.service 
+4. 设置系统日志传送到192.168.1.37：
+[root@clusterFS-node4-salt conf.d]# vim /etc/rsyslog.conf 
+*.* @@192.168.1.37:514  #配置最后面设置
+5. [root@clusterFS-node4-salt conf.d]# systemctl restart rsyslog.service 
+-----------------------------
+#192.168.1.37上：
+1. [root@clusterFS-node3-salt conf.d]# cat indexer.conf 
+input {
+        syslog{
+                type => "system-syslog"
+                port => 514
+        }
+        redis {
+                type => "apache-accesslog"
+                host => "192.168.1.31"
+                port => "6379"
+                db => "6"
+                data_type => "list"
+                key => "apache-accesslog"
+        }
+        redis {
+                type => "es-log"
+                host => "192.168.1.31"
+                port => "6379"
+                db => "6"
+                data_type => "list"
+                key => "es-log"
+        }
+}
+
+filter {
+        if [type] == "apache-accesslog"{
+                grok{
+                        match => { "message" => "%{COMBINEDAPACHELOG}" }
+                }
+        }
+}
+
+
+output{
+        if [type] == "apache-accesslog"{
+                elasticsearch {
+                        hosts => ["192.168.1.31:9200"]
+                        index => "apa-accesslog-%{+YYYY.MM}"
+                }
+        }
+        if [type] == "system-syslog"{
+                elasticsearch {
+                        hosts => ["192.168.1.31:9200"]
+                        index => "syslog-%{+YYYY.MM}"
+                }
+        }
+        if [type] == "es-log"{
+                elasticsearch {
+                        hosts => ["192.168.1.31:9200"]
+                        index => "myes-log-%{+YYYY.MM}"
+                }
+        }
+}
+2. [root@clusterFS-node3-salt logstash]# vim /etc/init.d/logstash 
+LS_USER=root   #将logstash改成root(如果不启端口用root，启用端口用logstash用户)
+LS_GROUP=root
+3. [root@clusterFS-node3-salt logstash]# systemctl restart logstash.service 
+-----------------------------
+结论：如果redis list 作为ELKStack消息队列，那么请对所有list key的长度进行监控
+llen key_name
+根据实际情况，例如超过10万就报警。如果不做redis满了的话就会删除老的数据从而丢失数据。
+
+消息队列换成kafka
+深入学习：在infoQ上搜索kafka
+实践==>深度实践：数据写入hadop(web-hdfs写入到hadop)
+</pre>
