modify end for 201903042254

--- a/8.ELKStack.md
+++ b/8.ELKStack.md
@@ -1,4 +1,4 @@
-﻿#ELKStack
+#ELKStack
 官网：https://www.elastic.co
 插件文档：https://www.elastic.co/guide/en/logstash-versioned-plugins/current/index.html
 ELKStack简介:
@@ -915,7 +915,24 @@ LS_GROUP=root
 llen key_name
 根据实际情况，例如超过10万就报警。如果不做redis满了的话就会删除老的数据从而丢失数据。
 
+作业：
 消息队列换成kafka
 深入学习：在infoQ上搜索kafka
 实践==>深度实践：数据写入hadop(web-hdfs写入到hadop)
+
+带着目标学Python:
+目标一：
+1. 把我们资产的Excel导出来，存放到redis里面。使用hash类型。
+2. 使用Python脚本，遍历所有主机，通过zabbix api判断是否增加监控。
+
+目标二：
+1. 给所有资产的Excel。增加一个字段，叫做角色。例如nginx、haproxy、php
+2. 同目标一的1。然后编写python脚本，调用saltstack api。对该角色执行对应的状态。
+
+目标三：
+尝试把现在的Excel。写入到mysql数据库。通过Python导入。
+把之前读取redis的操作，改成mysql。
+
+Head First Python  #这本python书要看一下
+
 </pre>
