--- a/1.Cobbler.md
+++ b/1.Cobbler.md
@@ -1,7 +1,6 @@
 ﻿#操作系统安装流程及系统初始化规范
->  v1.0   write of Jack
 
-
+<pre>
 ##操作系统安装规范
 ###物理设备层面：
 	1.服务器标签化（IP地址和机柜上第几台）、设备负责人、设备采购详情、设备摆放标准（负载均衡设备一个机柜放一台）
@@ -282,7 +281,7 @@ $yum_config_stanza
 <pre>
 rpm –ivh https://mirrors.aliyun.com/epel/epel-release-latest-7.noarch.rpm
 Yum install –y koan
-Koan –server=192.168.1.237 --list =profiles  查看可以重装的系统</pre>
+Koan –-server=192.168.1.237 --list=profiles  查看可以重装的系统</pre>
 2. Koan --replace-self --server=192.168.1.237 --profile=CentOS6-x86_64  tftp客户端自动安装指定系统版本
 3. Cobbler网页管理:https://192.168.1.237/cobbler_web用户名和密码默认都是:cobbler
 4. 修改cobbler网页版默认密码：htdigest /etc/cobbler/users.digest  "Cobbler" cobbler（“Cobbler”为用户描述信息，cobbler为要改密码的用户名）
@@ -338,3 +337,6 @@ Cobbler sync
 
 1.源码安装路径：/usr/local/appname.vsesion
 2.创建软连接：ln -s /usr/local/appname.version /usr/local/appname
+
+
+</pre>
