--- a/9.CCV.md
+++ b/9.CCV.md
@@ -24,5 +24,61 @@ VPS：虚拟专用主机
 云计算的分层：
 套装软件层（从硬件到系统到数据应用）=>基础设施服务(ias，从系统到数据应用)=>平台服务(pas，从数据到应用)=>软件服务(sas，全部由提供商来做)
 
+云计算不等于虚拟化。
+
+LXC听说是docker有用到。
+LXD性能比KVM更好。
+LXCFS来隔离docker,因为docker使用uptime命令获取的是物理机的时间，而不是容器的时间。
+
+硬件虚拟化和软件虚拟化
+全虚拟化（硬件虚拟化，kvm）和半虚拟化（xen）
+半虚拟化性能比全虚拟化好
+
+kvm:一个8G的内存可以配两个8G的内存，能超配。
+xen:一个8G的内存只能能一个8G的内存，不能超配。
+虚拟化使用场景：服务器虚拟化、桌面虚拟化、应用虚拟化（xenapp，用浏览器来访问客户端程序）。
+KVM（kernel-based Virtual Machine）：以色列创办的，被REDHAT收购了。
+RHEV:红帽企业虚拟化。
+VMware workstation支持嵌套虚拟机，其他的不行.
+QEMU:软件虚拟化软件
+KVM:硬件虚拟化
+
+#kvm:
+1.vmware workstation在虚拟机中开启VT-x和AMD-V的cpu虚拟化
+2.ESXI开户嵌套虚拟化:
+1.登录至ESXi Shell 2.find / -name *.vmx 3.找到对应的虚拟机更改配置文件,在最后一行添加vhv.enable = "TRUE"
+sed -i '$ avhv.enable = "TRUE"' /vmfs/volumes/570794cb-7a2de328-398b-000c294ee9b7/centos7/centos7.vmx
+查看cpu是否支持虚拟化,linux中使用grep -E 'vmx|svm' /proc/cpuinfo 看是否有,有的话现在安装KVM
+#安装KVM:
+yum install -y qemu-kvm qemu-kvm-tools libvirt  #安装kvm
+systemctl start libvirtd    #启动libvirtu
+systemctl enable libvirtd
+[root@Linux-node1-salt ~]# ifconfig 
+virbr0: flags=4099<UP,BROADCAST,MULTICAST>  mtu 1500
+        inet 192.168.122.1  netmask 255.255.255.0  broadcast 192.168.122.255
+        ether 52:54:00:8d:87:d3  txqueuelen 1000  (Ethernet)
+        RX packets 0  bytes 0 (0.0 B)
+        RX errors 0  dropped 0  overruns 0  frame 0
+        TX packets 0  bytes 0 (0.0 B)
+        TX errors 0  dropped 0 overruns 0  carrier 0  collisions 0
+注:kvm默认帮你安装了个桥接的网上,名字叫virbr0,ip地址永远是192.168.122.1
+
+[root@Linux-node1-salt ~]# ps aux | grep dns
+nobody    2772  0.0  0.0  55936  1120 ?        S    23:02   0:00 /usr/sbin/dnsmasq --conf-file=/var/lib/libvirt/dnsmasq/default.conf --leasefile-ro --dhcp-script=/usr/libexec/libvirt_leaseshelper
+root      2773  0.0  0.0  55908   388 ?        S    23:02   0:00 /usr/sbin/dnsmasq --conf-file=/var/lib/libvirt/dnsmasq/default.conf --leasefile-ro --dhcp-script=/usr/libexec/libvirt_leaseshelper
+root      2890  0.0  0.0 112708   972 pts/0    S+   23:05   0:00 grep --color=auto dns
+注:kvm默认帮你安装启动了dnsmasq(开源工具),这个服务有dns和dhcp的功能,会给你的虚拟机分配ip和dns
+
+现在要在kvm上安装一个虚拟机,需要安装一个vnc的客户端,自己先安装好
+[root@Linux-node1-salt ~]# qemu-img create -f raw /opt/CenOS-7-x86_64.raw 10G   #raw虚拟机镜像的格式,是一种裸磁盘,镜像给10G大
+Formatting '/opt/CenOS-7-x86_64.raw', fmt=raw size=10737418240
+
+在kvm上安装虚拟机:
+[root@Linux-node1-salt ~]# yum install -y virt-install #先安装装虚拟机的工具
+安装虚拟机:
+ virt-install --virt-type kvm --name CentOS-7-x86_64 --ram 2048 --cdrom=/opt/CentOS-7-x86_64.iso --disk path=/opt/CenOS-7-x86_64.raw --network network=default --graphics vnc,listen=0.0.0.0 --noautoconsole
+
+netstat -tnlp | grep kvm  #查看开启vnc的服务端口
+再然后赶紧用vnc客户端连上去安装Centos7系统,光标停留在Install CentOS7上,按tab键进入设置,在quiet后面添加net.ifnames=0 biosdevname=0 使网上名称为eth0
 
 </pre>
